// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given existing transactions, when retrieving transactions with an offset and limit, returns the transactions matching the limit and offset 1`] = `
Object {
  "transactions": Object {
    "items": Array [
      Object {
        "ISIN": "IE00B4X9L533",
        "costs": Object {
          "amount": 0,
          "currency": "",
          "numberOfDecimals": 0,
        },
        "count": 8,
        "exchange": "EPA",
        "id": "3dfd8f62-7d5a-4451-8fc6-875834b3aa9e",
        "product": "HSBC MSCI WORLD",
        "purchaseDate": 2020-08-31T08:00:00.000Z,
        "purchaseValue": Object {
          "amount": -16616,
          "currency": "EUR",
          "numberOfDecimals": 2,
        },
        "rate": Object {
          "amount": 2077,
          "currency": "EUR",
          "numberOfDecimals": 2,
        },
        "total": Object {
          "amount": -16616,
          "currency": "EUR",
          "numberOfDecimals": 2,
        },
      },
    ],
    "offset": 2,
    "size": 1,
    "total": 3,
  },
}
`;

exports[`given existing transactions, when retrieving transactions without an offset and limit, returns all transactions 1`] = `
Object {
  "transactions": Object {
    "items": Array [
      Object {
        "ISIN": "IE00B3XXRP09",
        "costs": Object {
          "amount": 0,
          "currency": "EUR",
          "numberOfDecimals": 2,
        },
        "count": 2,
        "exchange": "EAM",
        "id": "29f09ed1-684c-4df3-8295-e12b7e8460d6",
        "product": "VANGUARD S&P500",
        "purchaseDate": 2020-12-31T09:55:00.000Z,
        "purchaseValue": Object {
          "amount": 10996,
          "currency": "EUR",
          "numberOfDecimals": 2,
        },
        "rate": Object {
          "amount": 54981,
          "currency": "EUR",
          "numberOfDecimals": 3,
        },
        "total": Object {
          "amount": 10996,
          "currency": "EUR",
          "numberOfDecimals": 2,
        },
      },
      Object {
        "ISIN": "IE00B4X9L533",
        "costs": Object {
          "amount": 0,
          "currency": "EUR",
          "numberOfDecimals": 2,
        },
        "count": 2,
        "exchange": "EPA",
        "id": "03065814-a998-4876-8b6a-bafdeb26664e",
        "product": "HSBC MSCI WORLD",
        "purchaseDate": 2020-11-12T21:55:00.000Z,
        "purchaseValue": Object {
          "amount": 4068,
          "currency": "EUR",
          "numberOfDecimals": 2,
        },
        "rate": Object {
          "amount": 20339,
          "currency": "EUR",
          "numberOfDecimals": 3,
        },
        "total": Object {
          "amount": 4068,
          "currency": "EUR",
          "numberOfDecimals": 2,
        },
      },
    ],
    "offset": 0,
    "size": 2,
    "total": 2,
  },
}
`;
